k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-backend-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: netflix-backend
