k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: netflix-frontend
